[package]
name = "crate-patcher"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features=["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4.43"
flate2 = "1.0.35"
toml_edit = "0.22.22"
glob = "0.3.2"
diffy = "0.4.0"
file-lock = "2.1.11"
